# jetson-ffmpeg

./: CMakeLists.txt  Dockerfile  README.md  aarch64.cmake  nvmpi.pc.in  nvmpi_dec.cpp  nvmpi_enc.cpp
.github/workflows/: deb.yml
build.nvidia/usr/include/: nvmpi.h
build.nvidia/usr/lib/aarch64-linux-gnu/: libnvmpi.so.0.0.1  libnvmpi.so.1
build.nvidia/usr/lib/aarch64-linux-gnu/pkgconfig/: nvmpi.pc
